# creova-state-machine

./: .gitignore  CMakeLists.txt  NAVIGATION.md  NETWORK_SETUP.md  PERCEPTION.md  README.md  detections.json  install_fetch_ws.sh  mock_nav2_status_publisher.py  mock_object_list_publisher.py  mock_perception_node.py  mock_robot_status_publisher.py  nav2_status.json  package.xml  ros2_dockerfile.txt  setup.cfg  setup.py  simple_test.py  test_integration.py
.devcontainer/: devcontainer.json
creova_state_machine/: __init__.py
creova_state_machine/nodes/: __init__.py  destination_server_node.py  final_detection_subscriber.py  get_destination_client.py  hw_sw_node.py  manipulation_node.py  nav_ready_trigger.py  navigation_node.py  orchestration_node.py  perception_node.py  physical_ai_node.py  publisher.py  state_monitor_node.py  status_logger_node.py  status_replayer_node.py  test_destination_server.py  test_perception.py
launch/: core_system.launch.py  integrated_system.launch.py  orchestration.launch.py  real_robot_system.launch.py  test_orchestration.launch.py
log/: latest_list
src/: test_system.py
src/custom_msgs/msg/: Intent.msg  ObjectPose.msg  ObjectRequest.msg  Status.msg
src/launch/: system_launch.py
src/nodes/: navigation_node.py  perception_node.py
src/orchestration_interfaces/msg/: Intent.msg  ObjectPose.msg  Status.msg
src/orchestration_node/: fsm.py  robot_brain_node.py
src/trans_msg/: CMakeLists.txt  package.xml
srv/: GetObjectPose.srv  PickObject.srv
test/: README_TESTING.md  manual_test_orchestration.py  test_navigation.py  test_orchestration.py  visualize_state_machine.py
tests/: test1.py
